bk_ida/gccida/g0/doloop_modify_runtime
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify_runtime/src/doloop.c:1011:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify_runtime/src/doloop.c:1020:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify_runtime/src/doloop.c:1021:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v13; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify_runtime/src/doloop.c:1036:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code comparison_code; // [rsp+84h] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify_runtime/src/doloop.c:1047:19: error: expected identifier or '('
 struct loop_info = ( const  struct loop_info *)loop->aux; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify_runtime/src/doloop.c:1114:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)diff + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify_runtime/src/doloop.c:1125:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)iterations + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify_runtime/src/doloop.c:1145:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)iterations + 2), 
  ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doloop_modify_runtime/src/obj/doloop.o] Error 1
